# Proyecto-1-Datos-2-

./: README.md
cliente/: CMakeLists.txt  binary_image_data.txt  binerio_imagen.txt  main.cpp
cliente/Archivos_texto/: datos_reverso.txt  datos_reverso_encontrada.txt  imagen1.txt  imagen2.txt
cliente/Clientec/: Cliente.cpp  Cliente.h  Lectura_Mensajes.cpp  Lectura_Mensajes.h
cliente/Interfaz/: Componentes.cpp  Componentes.h  Ventana.cpp  Ventana.h
cliente/Tarjetas/: PtrTarjetas.cpp  PtrTarjetas.h  Tarjeta.cpp  Tarjeta.h
server/: CMakeLists.txt  main.cpp
server/Imagenes/: binario_imagen.txt
server/Servidor/: Datos_juego.cpp  Datos_juego.h  Lectura_Mensajes.cpp  Lectura_Mensajes.h  Logica_juego.cpp  Logica_juego.h  Server.cpp  Server.h
server/Tarjetas/: Matriz_disco.cpp  Matriz_disco.h  Matriz_memoria.cpp  Matriz_memoria.h  Tarjetas_Cargadas.cpp  Tarjetas_Cargadas.h  informcaion_tarjetas.txt
